--- a/ODOTCOMM18.Rmd
+++ b/ODOTCOMM18.Rmd
@@ -103,11 +103,34 @@ drums = read_csv("data/drums_nmfs.csv")
 Code from marinebon <https://github.com/marinebon/infographiq> 
 ```{r Infographic}
 
-svg_elements = read_csv("svg_elements.csv")
-plot_indicators = read_csv("plot_indicators.csv")
+#svg_elements = read_csv("svg_elements.csv")
+#plot_indicators = read_csv("plot_indicators.csv")
 
-infographiq::create_info_site(
-    render_modals = T
-)
+Saltmarsh_ecoton_infographic = create_info_site(
+  path_root = ".",
+  dir_svg = "svg",
+  elements_csv = "svg_elements.csv",
+  indicators_csv = "plot_indicators.csv",
+  site_title = "Louisiana Saltmarsh Ecotone Infographic",
+  dir_rmd = "rmd",
+  dir_web = "docs",
+  svg_paths = list.files(file.path(path_root, dir_svg), ".*\\.svg$", full.names = T),
+  svg_names = tools::file_path_sans_ext(basename(svg_paths)),
+  site_yml_brew = system.file("site_template/_site.yml.brew",
+  package =
+  "infographiq"),
+  index_md_brew = system.file("site_template/index.md.brew",
+  package = "infographiq"),
+  readme_md_brew = system.file("site_template/README.md.brew", package =
+  "infographiq"),
+  header = system.file("site_template/_header.html", package =
+  "infographiq"),
+  footer = system.file("site_template/_footer.html", package =
+  "infographiq"),
+  styles_css = system.file("site_template/styles.css", package
+  = "infographiq"),
+  render_modals = T,
+  preview_site = T
+  )
 
 ```
