--- a/ODOTCOMM18.Rmd
+++ b/ODOTCOMM18.Rmd
@@ -7,7 +7,7 @@ output: html_document
 
 # Louisiana Saltmarsh Ecotone Infographic 
 
-## Developed by Megan Hepner, Paige Byerly, and Bethann Garramon Merkle during the [LUMCON OCEANDOTCOMM workshop](https://lumcon.edu/oceandotcomm/) 
+## Developed by Megan Hepner, Paige Byerly, and Bethann Garramon Merkle at [OceanDotComm](https://lumcon.edu/oceandotcomm/), a science commmunication workshop, supported by the Louisiana Universities Marine Consortium (LUMCON). 
 
 ## Objective: Develop an interactive infographic of the Louisiana bayou saltmarsh ecotone with enganging narrative to depict what the status and trend of key ecosystem species. 
 
