--- a/rmd/modals/red_drum.Rmd
+++ b/rmd/modals/red_drum.Rmd
@@ -16,33 +16,37 @@ library(infographiq)
 
 <base target="_parent">
 
-```{r}
+
+```{r out.width='100%'}
 tryCatch(
-    plot_timeseries(
-        csv_tv  = "https://github.com/mhepner90/LUMCON_ODOTCOMM18/blob/master/data/drums_nmfs.csv",
+    plot_dygraph_timeseries(
+        csv_tv  = "https://github.com/mhepner90/LUMCON_ODOTCOMM18/blob/master/prep/data/drums_nmfs.csv",
         title   = "Commercial Red and Black Drum Landings",
         y_label = "Pounds",
-        skip    = 0,
-        filter  = NULL,
         col_t   = "Year",
-        col_y   = "Pounds",
-        group_by= "Species"
+        col_y   = "Pounds"
+        #skip_lines
+        , group_by="Species"
+        #std_err   
+        #filter
     ),
     error = function(e) e
 )
 ```
 
-```{r}
+
+```{r out.width='100%'}
 tryCatch(
-    plot_timeseries(
-        csv_tv  = "https://github.com/mhepner90/LUMCON_ODOTCOMM18/blob/master/data/drums_nmfs.csv",
+    plot_dygraph_timeseries(
+        csv_tv  = "https://github.com/mhepner90/LUMCON_ODOTCOMM18/blob/master/prep/data/drums_nmfs.csv",
         title   = "Commercial Red and Black Drum Landings",
         y_label = "U.S. Dollars",
-        skip    = 0,
-        filter  = NULL,
         col_t   = "Year",
-        col_y   = "Dollars",
-        group_by= "Species"
+        col_y   = "Dollars"
+        #skip_lines
+        , group_by="Species"
+        #std_err   
+        #filter
     ),
     error = function(e) e
 )
