--- a/rmd/modals/bottlenose_dolphin.Rmd
+++ b/rmd/modals/bottlenose_dolphin.Rmd
@@ -15,3 +15,7 @@ library(infographiq)
 ```
 
 <base target="_parent">
+## Bottlenose dolphins (*Tursiops truncatus truncatus*)
+In the Gulf of Mexico, bottlenose dolphins are split into two distinct groups, coastal and offshore. Coastal bottlenose dolphins are smaller in size than the offshore group, and in Louisiana they are a common saltmarsh resident, traveling up saltmarsh bayous and canals to fish. Bottlenose dolphins have strong site fidelity, and will not leave the area they’re born in, so coastal Louisiana populations are reliant on healthy saltmarshes for survival. 
+
+Abundance and population trends are unknown for this focal saltmarsh species, representing an opportunity for valuable future research. 
