--- a/rmd/modals/nutria.Rmd
+++ b/rmd/modals/nutria.Rmd
@@ -20,7 +20,7 @@ library(infographiq)
 ```{r out.width='100%'}
 tryCatch(
     plot_dygraph_timeseries(
-        csv_tv  = "https://github.com/mhepner90/LUMCON_ODOTCOMM18/blob/master/prep/data/nutria_summarized.csv",
+        csv_tv  = "https://raw.githubusercontent.com/mhepner90/LUMCON_ODOTCOMM18/master/prep/data/nutria_summarized.csv",
         title   = "Annual Nutria Harvest",
         y_label = "Number of Tails Collected",
         col_t   = "Year",
@@ -38,7 +38,7 @@ tryCatch(
 ```{r out.width='100%'}
 tryCatch(
     plot_dygraph_timeseries(
-        csv_tv  = "https://github.com/mhepner90/LUMCON_ODOTCOMM18/blob/master/prep/data/nutria_summarized.csv",
+        csv_tv  = "https://raw.githubusercontent.com/mhepner90/LUMCON_ODOTCOMM18/master/prep/data/nutria_summarized.csv",
         title   = "NA",
         y_label = "Estimated Herbivory Damage (acres)",
         col_t   = "Year",
@@ -51,3 +51,9 @@ tryCatch(
     error = function(e) e
 )
 ```
+## Nutria (*Myocastor coypus*)   
+Figure: Tails collected represent total number of nutria harvested and submitted to LDWF (November-March) for bounty from 2002-2016. Estimated herbivory damage is reported in acres and is extrapolated from yearly aerial surveys of coastal wetland transects in coastal Louisiana (defined as the region bounded by the Interstates 10 and 12 from the Texas to Mississippi state lines). 
+
+Introduced nutria contribute to wetland loss by eating the roots of stabilizing grasses, and can rapidly turn healthy marsh into open water. In Louisiana, wetland destruction by nutria was extensive until the initiation of the Coastwide Nutria Control Program in 2002, which pays local trappers to harvest nutria. The program has successfully reduced the amount of damage caused by nutria, and their numbers have stabilized statewide. 
+
+Source: CNCP/CWPRA/LDWF. Information via the Coastwide Nutria Control Program (CNCP), which is overseen by the Louisiana Department of Wildlife and Fisheries (LDWF) and funded through the Coastal Wetlands Planning, Protection, and Restoration Act (CWPPRA) 
