--- a/rmd/modals/periwinkle_snails.Rmd
+++ b/rmd/modals/periwinkle_snails.Rmd
@@ -15,3 +15,7 @@ library(infographiq)
 ```
 
 <base target="_parent">
+## Periwinkle Snails (*Littoraria irrorata*) 
+Periwinkle snails depend on damp marsh conditions to keep their gills wet, but may migrate up tall marsh grasses above the tideline to avoid predation by blue crabs and diamondback terrapins. 
+
+Abundance and population trends are unknown for this important indicator species, representing an opportunity for valuable future research. 
