--- a/rmd/modals/phragmites.Rmd
+++ b/rmd/modals/phragmites.Rmd
@@ -20,7 +20,7 @@ library(infographiq)
 ```{r out.width='100%'}
 tryCatch(
     plot_dygraph_timeseries(
-        csv_tv  = "https://github.com/mhepner90/LUMCON_ODOTCOMM18/blob/master/prep/data/vegetation_summarized.csv",
+        csv_tv  = "https://raw.githubusercontent.com/mhepner90/LUMCON_ODOTCOMM18/master/prep/data/vegetation_summarized.csv",
         title   = "Phragmites Mean Percent Cover",
         y_label = "Mean Percent Cover",
         col_t   = "Year",
