--- a/rmd/modals/diamondback_terrapin.Rmd
+++ b/rmd/modals/diamondback_terrapin.Rmd
@@ -15,3 +15,8 @@ library(infographiq)
 ```
 
 <base target="_parent">
+## Diamondback Terrapin (*Malaclemys terrapin*)  
+The diamondback terrapin is the only turtle in the world that lives in saltmarsh. They are a species of greatest conservation concern in Louisiana, due in part to their past history as a key ingredient in turtle soup. Current threats include coastal land loss and human activity at nest sites. 
+
+Abundance and population trends are unknown for this unique saltmarsh species, representing an opportunity for valuable future research. 
+
