--- a/rmd/saltmarsh.rmd
+++ b/rmd/saltmarsh.rmd
@@ -8,8 +8,11 @@ title: "saltmarsh"
    <div class="col-sm-3" id="svg_id_list_div">
    <ul id="svg_id_list"></ul>
    </div>
-  </div> <!-- row -->
-</div> <!-- container -->
+  </div> <!-- /row -->
+  <div class="row">
+   
+  </div> <!-- /row -->
+</div> <!-- /container -->
 
 <script>
 var svg = "saltmarsh.svg";
@@ -41,3 +44,4 @@ $('#myModal').on('show.bs.modal', function (e) {
   $(this).find(".modal-body").html('<iframe frameborder="0" width="100%" height="850" src="URL">'.replace('URL',link.attr("href")))
 })
 </script>
+*TODO*: caption for below the `saltmarsh` svg here
