--- a/rmd/modals/black_x5F_mangroves.Rmd
+++ b/rmd/modals/black_x5F_mangroves.Rmd
@@ -22,7 +22,7 @@ tryCatch(
     plot_dygraph_timeseries(
         csv_tv  = "https://raw.githubusercontent.com/mhepner90/LUMCON_ODOTCOMM18/master/prep/data/black_mangroves_summarized.csv",
         title   = "Black Mangrove Percent Cover",
-        y_label = "Mean Percent Cover",
+        y_label = "Mean % Cover",
         col_t   = "Year",
         col_y   = "percent_cover_mean"
         #skip_lines
