--- a/rmd/modals/red_x5F_drum.Rmd
+++ b/rmd/modals/red_x5F_drum.Rmd
@@ -21,7 +21,7 @@ library(infographiq)
 tryCatch(
     plot_dygraph_timeseries(
         csv_tv  = "https://raw.githubusercontent.com/mhepner90/LUMCON_ODOTCOMM18/master/prep/data/drums_nmfs.csv",
-        title   = "Commercial Red and Black Drum Landings",
+        title   = "Commercial Red Drum and Black Drum Landings",
         y_label = "Pounds",
         col_t   = "Year",
         col_y   = "Pounds"
@@ -39,7 +39,7 @@ tryCatch(
 tryCatch(
     plot_dygraph_timeseries(
         csv_tv  = "https://raw.githubusercontent.com/mhepner90/LUMCON_ODOTCOMM18/master/prep/data/drums_nmfs.csv",
-        title   = "Commercial Red and Black Drum Landings",
+        title   = "Commercial Red Drum and Black Drum Landings",
         y_label = "U.S. Dollars",
         col_t   = "Year",
         col_y   = "Dollars"
