--- a/rmd/modals/red_x5F_snapper.Rmd
+++ b/rmd/modals/red_x5F_snapper.Rmd
@@ -21,14 +21,14 @@ library(infographiq)
 tryCatch(
     plot_dygraph_timeseries(
         csv_tv  = "https://raw.githubusercontent.com/mhepner90/LUMCON_ODOTCOMM18/master/prep/data/snapper_nmfs.csv",
-        title   = "Annual Commercial Snapper Landings in Pounds",
+        title   = "Annual Commercial Red Snapper Landings in Pounds",
         y_label = "Pounds",
         col_t   = "Year",
         col_y   = "Pounds"
         #skip_lines
-        , group_by="Species"
+        #group_by  
         #std_err   
-        #filter
+        , filter="Species == \"Red Snapper\""
     ),
     error = function(e) e
 )
@@ -39,14 +39,14 @@ tryCatch(
 tryCatch(
     plot_dygraph_timeseries(
         csv_tv  = "https://raw.githubusercontent.com/mhepner90/LUMCON_ODOTCOMM18/master/prep/data/snapper_nmfs.csv",
-        title   = "Annual Commercial Snapper Landings in Dollars",
+        title   = "Annual Commercial Red Snapper Landings in Dollars",
         y_label = "U.S. Dollars",
         col_t   = "Year",
         col_y   = "Dollars"
         #skip_lines
-        , group_by="Species"
+        #group_by  
         #std_err   
-        #filter
+        , filter="Species == \"Red Snapper\""
     ),
     error = function(e) e
 )
